# casual-causal

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/linear-regression/: basic.ipynb  numpy-loop.ipynb  numpy-steps.ipynb  pytorch-complete.ipynb  utils.ipynb
notebooks/linear-regression/utils/: data_generation.py  data_train_split.py
